--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tsparticles/all": "^3.7.1",
     "@tsparticles/react": "^3.0.0",
     "@vitejs/plugin-react": "^4.3.4",
+    "clarifai": "^2.9.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-particles": "^2.12.2",
