--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tsparticles/react": "^3.0.0",
     "@vitejs/plugin-react": "^4.3.4",
     "clarifai": "^2.9.1",
+    "clarifai-nodejs-grpc": "^10.11.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-particles": "^2.12.2",
